# layer-surgeon

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRD.md  PROJECT_STATUS.md  README.md  ROADMAP.md  pyproject.toml
docs/: README.md  bambu.md  gcode.md  masterplan.md  monitoring.md  recovery.md
docs/decisions/: 0001-pragmatic-hexagonal-architecture.md
docs/history/: chatgpt-origin.md
examples/: recover_layer112.sh
layer_surgeon/: cli.py  composition.py  gcode.py  ports.py  recover.py  source.py
layer_surgeon/adapters/: __init__.py  filesystem.py
layer_surgeon/adapters/renderers/: __init__.py  diff.py  gcode.py  report.py
layer_surgeon/adapters/sources/: __init__.py  plain_gcode.py  three_mf.py
layer_surgeon/application/: __init__.py  recover_print.py
layer_surgeon/domain/: __init__.py  analysis.py  errors.py  models.py  recovery.py
tests/: test_architecture.py  test_golden_recovery.py  test_layers.py  test_source.py
