[project]
name = "layer-surgeon"
version = "0.1.0"
description = "Auditable G-code recovery and diff tool for failed 3D prints"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Layer Surgeon contributors"}]
dependencies = []

[project.optional-dependencies]
dev = [
    "mypy>=1.16,<2",
    "pytest>=8,<9",
    "ruff>=0.12,<1",
]

[project.scripts]
layer-surgeon = "layer_surgeon.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["layer_surgeon"]
